--- a/user-service/src/main/resources/static/index.html
+++ b/user-service/src/main/resources/static/index.html
@@ -1,10 +1,37 @@
+<!-- src/main/resources/static/index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title>Attendance System</title>
 </head>
 <body>
-$END$
+<h1>Add Employee</h1>
+<form id="employeeForm">
+    <input type="text" name="firstName" placeholder="First Name" required><br>
+    <input type="text" name="lastName" placeholder="Last Name" required><br>
+    <input type="email" name="email" placeholder="Email" required><br>
+    <button type="submit">Add Employee</button>
+</form>
+
+<script>
+    document.getElementById("employeeForm").addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const formData = new FormData(e.target);
+        const data = {
+            firstName: formData.get("firstName"),
+            lastName: formData.get("lastName"),
+            email: formData.get("email")
+        };
+
+        const response = await fetch("/api/employees", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(data)
+        });
+
+        const result = await response.json();
+        alert("Employee added: " + JSON.stringify(result));
+    });
+</script>
 </body>
 </html>
